@@ -22,7 +22,8 @@ require_relative 'vpsfree-irc-bot/uptime'
 require_relative 'vpsfree-irc-bot/rank'
 require_relative 'vpsfree-irc-bot/url_marker'
 require_relative 'vpsfree-irc-bot/web_event_log'
-require_relative 'vpsfree-irc-bot/outage_report'
+require_relative 'vpsfree-irc-bot/mailman'
+require_relative 'vpsfree-irc-bot/mailing_lists'
 require_relative 'vpsfree-irc-bot/greeter'
 require_relative 'vpsfree-irc-bot/help'
 require_relative 'vpsfree-irc-bot/version'
@@ -55,7 +56,7 @@ module VpsFree::Irc::Bot
             Rank,
             UrlMarker,
             WebEventLog,
-            OutageReport,
+            MailingLists,
             Greeter,
         ]
         c.archive_url = opts[:archive_url]
@@ -63,7 +64,7 @@ module VpsFree::Irc::Bot
         c.api_url = opts[:api_url]
         c.webui_url = opts[:webui_url]
         c.nickserv = opts[:nickserv]
-        c.outage_mail = opts[:outage_mail]
+        c.plugins.options[MailingLists] = opts[:mailing_lists]
       end
     end
   end
